gladiator aligned on page and fixed head gap

--- a/assets/herostyle.css
+++ b/assets/herostyle.css
@@ -206,10 +206,10 @@ body {
         position: fixed;
         top: 10rem;
         left: 54.5rem;
-        transform: scale(1.1)1;
-        -moz-transform:scale(1.1);
-        -ms-transform: scale(1.1);
-        -webkit-transform: scale(1.1);
+        transform: scale(1.15);
+        -moz-transform:scale(1.15);
+        -ms-transform: scale(1.15);
+        -webkit-transform: scale(1.15);
         z-index: -4;
     }
 
